# melaya

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  composer.json  llms.txt
.github/workflows/: release.yml
benchmarks/: CHANGELOG.md
benchmarks/engine/: .gitignore  Cargo.toml  Dockerfile  README.md
benchmarks/engine/benches/: state_ticker.rs
benchmarks/engine/results/: README.md
benchmarks/engine/results/contributed/: .gitkeep
benchmarks/engine/results/reference/: summary.json
benchmarks/engine/scripts/: bench.ps1  bench.sh
benchmarks/engine/src/: lib.rs
benchmarks/framework/: .gitignore  Dockerfile  README.md  pyproject.toml
benchmarks/framework/benches/: bench_context_assembly.py  bench_cost_tracking.py  bench_crew_orchestration.py  bench_hitl_gate_overhead.py  bench_model_wrapper_overhead.py  bench_pipeline_orchestration.py  bench_prompt_injection.py  bench_rag_retrieval.py  bench_registry_boot.py  bench_session_memory.py  bench_tool_dispatch.py  bench_tracing_overhead.py  conftest.py
benchmarks/framework/results/: README.md
benchmarks/framework/results/contributed/: .gitkeep
benchmarks/framework/results/contributed/tier-d-i9-13900h/: context_assembly.json  cost_tracking.json  crew_orchestration.json  hitl_gate_overhead.json  model_wrapper_overhead.json  pipeline_orchestration_linear.json  pipeline_orchestration_parallel.json  prompt_injection_scan.json  rag_retrieval_100k.json  rag_retrieval_10k.json  registry_boot.json  session_memory.json  tool_dispatch_0arg.json  tool_dispatch_20arg.json  tool_dispatch_5arg.json  tracing_overhead.json
benchmarks/framework/results/contributed/tier-d-i9-13900h-win11/: mem_agnostic_aiml_c1.json  mem_agnostic_coderepl_c1.json  mem_agnostic_compaction_c1.json  mem_agnostic_conc_c1.json  mem_agnostic_mcp_c1.json  mem_agnostic_plain_c1.json  mem_agnostic_rag100k_c1.json  mem_agnostic_rag10k_c1.json  mem_agnostic_render_c1.json  mem_agnostic_streaming_c1.json  mem_agnostic_tooloutput_c1.json  mem_agnostic_webbrowser_c1.json  mem_agnostic_webfast_c1.json  mem_agnostic_wss_c1.json  mem_idle_idle_c1.json
benchmarks/framework/results/hitl_round_trip/: methodology_only.json
benchmarks/framework/results/memory_footprint/: methodology.json
benchmarks/framework/scripts/: bench.ps1  bench.sh
benchmarks/framework/src/melaya_bench_framework/: __init__.py  context.py  cost.py  crew.py  hitl_gate.py  model_wrapper.py  pipeline.py  rag.py  registry.py  security.py  session_memory.py  toolkit.py  tracing.py
benchmarks/framework/src/melaya_bench_framework/memory/: __init__.py  __main__.py  _child.py  _env.py  _harness.py  _sampler.py  _scenarios.py
data/: build_exchanges.py  exchanges.csv  exchanges.json
docs/: agentic-trading.md  awesome-agentic-trading.md  comparison.md  concepts.md  exchanges.md  faq.md  market-data.md  security.md  trading.md
examples/: Java.java  csharp.cs  go.go  kotlin.kt  php.php  python.py  ruby.rb  rust.rs  typescript.ts
scripts/: build_logos.py  bump-version.py  release-php.ps1
